--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"illuminate/support" : "~5.0",
+		"illuminate/support" : "v5.0.0",
 		"illuminate/html" : "5.0.0",
 		"laravel/framework": "4.2.9",
 		"barryvdh/laravel-debugbar": "1.*",
 		"anahkiasen/former": "3.*",
-		"Zizaco/confide": "4.3.0",
+		"Zizaco/confide": "dev-username-optional",
 		"zofe/rapyd": "2.0.10",
 		"artdarek/oauth-4-laravel": "dev-master",
 		"laravelbook/ardent": "2.*",
@@ -18,7 +18,6 @@
 		"camcima/mundipagg-php-client" : "dev-master"
 	},
 	"require-dev": {
-		"illuminate/support" : "4.1.*",
 		"way/generators": "2.6.1"
 	},
 	"autoload": {
